# dcc-mcp-unity

./: .gitignore  CHANGELOG.md  README.md  install.md  pyoxidizer.bzl  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml  tuanjie.yml  unity.yml
docs/: architecture-benchmark.md
docs/assets/: SOURCES.md
src/dcc_mcp_unity/: __init__.py  __version__.py  _standalone_entry.py  bridge.py  dispatcher.py  install.py  job_result.py  server.py
src/dcc_mcp_unity/skills/unity-diagnostics/: SKILL.md  tools.yaml
src/dcc_mcp_unity/skills/unity-diagnostics/scripts/: capture_game_view.py  inspect_job.py  read_console.py
src/dcc_mcp_unity/skills/unity-project/: SKILL.md  tools.yaml
src/dcc_mcp_unity/skills/unity-project/scripts/: build_windows_player.py  inspect_project.py  read_text_asset.py  refresh_and_compile.py  refresh_assets.py  run_tests.py  set_play_mode.py  upsert_text_asset.py
src/dcc_mcp_unity/skills/unity-scene/: SKILL.md  tools.yaml
src/dcc_mcp_unity/skills/unity-scene/metadata/: depends.md
src/dcc_mcp_unity/skills/unity-scene/scripts/: create_game_object.py  inspect_scene.py  save_scene.py  set_transform.py
src/dcc_mcp_unity/unity_package/: README.md  package.json
src/dcc_mcp_unity/unity_package/Editor/: AssemblyInfo.cs  DccMcp.Unity.Editor.asmdef  DccMcpBridge.cs  DccMcpCommands.cs  DccMcpConsole.cs  DccMcpJobs.cs  DccMcpObjectIdentity.cs  DccMcpSidecarLauncher.cs  DccMcpTestFrameworkBridge.cs  DccMcpTestRunner.cs
src/dcc_mcp_unity/unity_package/Tests/Editor/: DccMcp.Unity.Editor.Tests.asmdef  DccMcpCommandsTests.cs
tests/: test_bridge.py  test_dispatcher.py  test_game_authoring_tools.py  test_install.py  test_package.py  test_standalone.py  test_unity_bridge_smoke.py
tests/unity-2018-project/Assets/Tests/Editor/: DccMcpTypedRunnerProbeTests.asmdef  DccMcpTypedRunnerProbeTests.cs
tests/unity-2018-project/Assets/Tests/PlayMode/: DccMcpTypedRunnerPlayModeProbeTests.asmdef  (+1 more)
tests/unity-6000-project/: .gitignore
tools/: build_binary.py  lint_skills.py  unity_bridge_smoke.py
